--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
@@ -13,9 +13,40 @@
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/x-icon",
+      "density": "0.75"
+    },
+    {
+      "src": "android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/x-icon",
+      "density": "1.0"
+    },
+    {
+      "src": "android-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/x-icon",
+      "density": "1.5"
+    },
+    {
+      "src": "android-icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/x-icon",
+      "density": "2.0"
+    },
+    {
+      "src": "android-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/x-icon",
+      "density": "3.0"
+    },
+    {
+      "src": "android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/x-icon",
+      "density": "4.0"
     }
   ],
   "start_url": "./",
@@ -23,3 +54,4 @@
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
+
